--- a/docs/4-权限控制 acl/4-命令行工具.md
+++ b/docs/4-权限控制 acl/4-命令行工具.md
@@ -1,8 +1,8 @@
 # 4.4 命令行工具
 
-## 命令行工具
-
 `kafka-acls.sh`
+
+## 详细参数
 
 * Action:
     * `--add`: 增加 acl 规则
@@ -51,7 +51,7 @@
     * `--consumer`: Read, Describe on topic and Read on consumer-group
     * `--idempotent`: 和 `--producer` 一起使用，表示 producer 可以幂等写
 
-示例：
+## 示例
 
 1. 允许 User:Bob 或者 User:Alice 从 IP 198.51.100.0 或者 198.51.100.1 读写 Test-topic
 
@@ -172,7 +172,63 @@
         --cluster
 
         Adding ACLs for resource `ResourcePattern(resourceType=CLUSTER, name=kafka-cluster, patternType=LITERAL)`:
-         	(principal=User:Bob, host=*, operation=IDEMPOTENT_WRITE, permissionType=ALLOW)
+             (principal=User:Bob, host=*, operation=IDEMPOTENT_WRITE, permissionType=ALLOW)
 
         Current ACLs for resource `ResourcePattern(resourceType=CLUSTER, name=kafka-cluster, patternType=LITERAL)`:
-         	(principal=User:Bob, host=*, operation=IDEMPOTENT_WRITE, permissionType=ALLOW)
+             (principal=User:Bob, host=*, operation=IDEMPOTENT_WRITE, permissionType=ALLOW)
+
+    上述命令也替换成使用 `--bootstrap-server` 的方式：
+
+        kafka-acls.sh \
+        --bootstrap-server ${BOOTSTRAP_SERVER} \
+        --add \
+        --allow-principal User:* \
+        --operation IdempotentWrite \
+        --cluster
+
+        kafka-acls.sh \
+            --bootstrap-server ${BOOTSTRAP_SERVER} \
+            --add \
+            --allow-principal User:alice \
+            --operation IdempotentWrite \
+            --cluster  --command-config /usr/local/ams-worker/conf/kafka.properties
+
+13. 给用户 alice 增加事务Id `transaction_id` 的写权限：
+
+        kafka-acls.sh \
+            --bootstrap-server ${BOOTSTRAP_SERVER} \
+            --add \
+            --resource-pattern-type LITERAL \
+            --transactional-id transaction_id \
+            --allow-principal User:alice \
+            --operation Write
+
+        `--resource-pattern-type LITERAL --transactional-id=*` 表示所有事务Id
+
+        kafka-acls.sh \
+            --bootstrap-server ${BOOTSTRAP_SERVER} \
+            --add \
+            --resource-pattern-type LITERAL \
+            --transactional-id=* \
+            --allow-principal User:alice \
+            --operation Write
+
+13. 给用户 alice 增加事务Id `transaction_id` 的描述权限：
+
+        kafka-acls.sh \
+            --bootstrap-server ${BOOTSTRAP_SERVER} \
+            --add \
+            --resource-pattern-type LITERAL \
+            --transactional-id transaction_id \
+            --allow-principal User:alice \
+            --operation Describe
+
+13. 删除用户 alice 对事务Id `transaction_id` 的描述权限：
+
+        kafka-acls.sh \
+            --bootstrap-server ${BOOTSTRAP_SERVER} \
+            --remove \
+            --resource-pattern-type LITERAL \
+            --transactional-id transaction_id \
+            --allow-principal User:alice \
+            --operation Describe
